# FractalTrees

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
config/: CMakeLists.txt  SDLTree.h.in  euchre_info.h.in
lib/: CMakeLists.txt
src/: CMakeLists.txt  Subsystem.hxx  application.cxx  application.hxx  main.cxx  subsystem.cxx
src/application/: CMakeLists.txt  application.cxx  application.hxx  sprite_atlas.cxx  sprite_atlas.hxx
src/application/subsystem/: CMakeLists.txt  subsystem.cxx  subsystem.hxx
src/game_components/: CMakeLists.txt  card.cxx  card.hxx  card_decl.hxx  deck.cxx  deck.hxx  deck_decl.hxx
src/trees/: TreeNode.hxx  tree_main.cxx
